--- a/styles/utility.css
+++ b/styles/utility.css
@@ -34,6 +34,19 @@
     
 }
 
+
+.flex{
+    display: flex;
+}
+
+.gap-1{
+    gap: 1rem;
+}
+
+.grid{
+    display: grid;
+}
+
 @media (width >= 80em){
 
 .container{
