--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -25,6 +25,11 @@
         var(--brand-color-primary) 100%
     ) ;
     --btn-color: var(--surface-color);
+
+    --webkit-background-clip: initial;
+    background-clip: initial;
+    color: var(--btn-color);
+
 }
 
 
@@ -63,4 +68,20 @@ position: relative;
         z-index: 1;
         
     }
+}
+
+@media (width >= 80em){
+
+   
+    
+    .btn-sm{
+    font-size: var(--fs-base);
+    padding: .75rem 1.5rem;
+    }
+    
+    .btn-md{
+        padding: 1rem 2rem;
+     font-size: 1.125rem;
+    }
+
 }
